--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>kreme</title>
+    <!-- 引入百度地图定位功能 -->
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=zlpwDZUcPG9OGkQzoTGeUta1pHqM9WQf"></script>
   </head>
   <body>
     <div id="app"></div>
