--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>kreme</title>
+    <!-- 网站favicon.icon -->
+    <!-- <link rel="shortcut icon" href="assets/images/bitbug_favicon.ico" type="image/x-icon"> -->
     <!-- 引入百度地图定位功能 -->
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=zlpwDZUcPG9OGkQzoTGeUta1pHqM9WQf"></script>
   </head>
